Fix nginx configuration for upstream servers

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,12 @@
-upstream backend
-_
-servers {
-least
-conn;
-_
-server backend1:8080;
-server backend2:8080;
+upstream backend_servers {
+    server backend1:8080;
+    server backend2:8080;
 }
+
 server {
-listen 80;
-location / {
-proxy_pass http://backend
-_
-servers;
-}
+    listen 80;
+
+    location / {
+        proxy_pass http://backend_servers;
+    }
 }
